# CSE230_Project

./: .gitignore  BB.cabal  LICENSE  README.md  proposal.md  vty.config
app/: Main.hs
src/: BB.hs  Buff.hs  highest.txt  interval.txt  record.txt
src/UI/: Game.hs  Help.hs  Home.hs  Level.hs  Ranking.hs  Theme.hs
src/maps/: map.txt  map_0.txt  map_1.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt
test/: test.hs
